--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Nosotros tenemos diseñado un sistema de redes de mercadeo aceptado por las leye
     </div>
     <div class="tab ease  video-play play">
       <div class="header-video celeste">
-        <a class="btn btn-floating  active-x transparent" id="arrow-left" style="right: 5px;"><i class="material-icons"><div class="change_icon">keyboard_arrow_left</div></i></a>
+        <a class="btn btn-floating  active-x transparent" id="arrow-left" style="right: 5px;"><i class="material-icons"><div >keyboard_arrow_left</div></i></a>
       </div>
       <video id="video1"  preload="auto" poster="img/poster.png" width="720" height="480">
         <source src="img/video.mp4" type="video/mp4" />
